Add share car event
